Fix overflow scrolling forever bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,5 +6,4 @@ html,
 body {
   background: rgb(36, 36, 36);
   color: white;
-  min-height: 100vh;
 }
